<resources>
    <string name="app_name">Eagle UN</string>

    <!-- SignInActivity -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email_or_username">Email or username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >= 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="do_not_have_account">Do not have an account? Sign up here:</string>


    <!-- Navigation menu on MainActivity-->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_userList">User list</string>
    <string name="title_notifications">Notifications</string>

    <!-- PostsFragment -->
    <string name="user_shares">%1$s shared:</string>

    <!-- WritePostActivity -->
    <string name="title_write_post_activity">Write post</string>
    <string name="post_hint">Write your post</string>
    <string name="post_button">Post</string>
    <string name="posted_successfully">Posted successfully</string>

    <!-- Test strings-->
    <string name="test_post_author">Victor Ramires</string>
    <string name="test_post_content">A post about how cats are so lazy compared to dogs</string>
    <string name="test_user_name">Diego</string>
    <string name="test_user_lastName">Niquefa</string>
    <string name="test_user_email">niquefa.diego@gmail.com</string>
    <string name="test_user_followers">1032</string>
    <string name="test_user_following">110</string>
    <string name="test_notification_follow">Sebastian is following you</string>
    <string name="test_notification_share">Laura shared your post</string>
    <string name="test_user_shares">Juan Valdez shares:</string>

    <!-- FollowersActivity -->
    <string name="title_followers_activity">Followers</string>

    <!-- FollowingActivity -->
    <string name="title_following_activity">Following</string>

    <!-- MainActivity -->
    <string name="title_activity_main">Eagle UN</string>

    <!-- SignUpActivity -->
    <string name="title_activity_sing_up">Sign Up</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_user_lastName">Last time</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirmation">Password confirmation</string>
    <string name="action_sign_up">Sign up</string>
    <string name="already_have_account">Already have an account? Log in here:</string>
    <string name="user_created_successfully">Account created successfully</string>

    <!-- ProfileFragment -->
    <string name="profile_name">Name: </string>
    <string name="profile_lastName">Last name: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_followers">Followers: </string>
    <string name="profile_following">Following: </string>
    <string name="profile_update_data">Update data</string>
    <string name="profile_logOut">Log out</string>

    <!-- NotificationsFragment -->
    <string name="share_notification_text">%1$s shared your post</string>
    <string name="follow_notification_text">%1$s is now following you</string>

    <!-- OtherUserListFragment -->
    <string name="i_am_not_following">Not following</string>
    <string name="i_am_following">Following</string>
    <string name="follows_me">Follows me</string>
    <string name="does_not_follow_me">Does not follow me</string>

    <!-- ShowUserActivity-->
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>

    <!-- PostsFragment -->
    <string name="action_share">Share</string>
    <string name="action_share_fail">Failed to share post</string>
    <string name="action_share_duplicate">Post has already been shared</string>
    <string name="action_share_successful">Shared post successfully</string>

    <!-- Notifications channel -->
    <string name="channel_name">EagleUN notifications channel</string>
    <string name="channel_description">Channel used by the EagleUN app to push notifications</string>


    <!-- Strings -->
    <string name="no_music_list">You have not created any music list :(</string>
    <string name="music">Music:</string>
    <string name="music_list">The last list that I created is %1$s</string>

</resources>
