<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:layout_marginRight="6dp"
                android:layout_marginEnd="6dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
                android:id="@+id/showUser_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_lastName"
                android:layout_marginRight="6dp"
                android:layout_marginEnd="6dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
                android:id="@+id/showUser_lastName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user_lastName"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_followers"
                android:layout_marginRight="6dp"
                android:layout_marginEnd="6dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
                android:id="@+id/showUser_followers_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user_followers"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/linkColor"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_following"
                android:layout_marginRight="6dp"
                android:layout_marginEnd="6dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
                android:id="@+id/showUser_following_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user_following"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/linkColor"/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/showUser_followsMe"
            android:text="@string/follows_me"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <Button
            android:id="@+id/showUser_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_follow"/>

    <FrameLayout
            android:id="@+id/showUser_fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp">
    </FrameLayout>

</LinearLayout>