<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/profile_name_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_user_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

                <TextView
                        android:id="@+id/profile_lastName_textView"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_user_lastName"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_email"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <TextView
                        android:id="@+id/profile_email_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_user_email"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_followers"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <TextView
                        android:id="@+id/profile_followers_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_user_followers"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/linkColor"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_following"
                        android:layout_marginRight="6dp"
                        android:layout_marginEnd="6dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <TextView
                        android:id="@+id/profile_following_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_user_following"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/linkColor"/>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:text="@string/music"/>

            <TextView
                    android:id="@+id/profile_music_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/no_music_list"/>

            <TextView
                    android:id="@+id/profile_music_list_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:autoLink="web"
                    android:text="www.google.com"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/profile_updateData_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/profile_update_data"/>
        <Button
                android:id="@+id/profile_logOut_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_logOut"/>
    </LinearLayout>

    <FrameLayout
            android:id="@+id/profileFragment_fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">
    </FrameLayout>

</LinearLayout>